--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,40 @@
+# Dependencies
 node_modules/
-.DS_Store
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Environment variables
 .env
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-uploads/*
-!uploads/.gitkeep
+
+# Production build
+/build
+/dist
+
+# Debug logs
+logs
+*.log
+
+# Operating System Files
+.DS_Store
+Thumbs.db
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional: IDE and editor folders
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Uploads directory (user-generated content)
+/public/uploads/*
+!/public/uploads/.gitkeep 
